# dkwk

./: .gitattributes  .gitignore  .gitmodules  HTTPd.rb  Makefile  README.md
engine-etc/: dkwk  ins-init.pl  named.cache  named.zone  nginx.conf
engine-src/: .gitignore  Makefile  configure  configure.ac  pyproject.toml
engine-src/dkwk/: asgi.py  can.py  conf.py  config.py.in  dbi.py  git.py  push.py  rpxy.py  uri.py
engine-src/t/: minigit.py  test02_conf.py  test05_uri.py  test10_dbi.py
engine-www/: index.html  style.css
public_html/: Guestbook.html  index.html  parser.js  robots.txt  style.css
public_html/Guestbook/: index.html
public_html/Manual/: Markup.html  Permission.html
scripts/: ins-docs  ins-githooks  ins-init
src/: package-lock.json  package.json
src/t/: parser.tap.js
wiki/: index.txt
wiki/Guestbook/: index.txt
wiki/Manual/: Permission.txt
